mule-user-guide/v/3.2/proxying-web-services-with-cxf.adoc
= 使用CXF代理Web服务

通常，在构建CXF Web服务时，您会将XML绑定到POJO。 CXF组件可能会收到一个OrderRequest对象，或者您可能通过CXF出站路由器发送OrderRequest对象。但是，在构建Web服务或使用其他Web服务时直接使用XML通常很有用。 CXF模块提供了执行此操作的功能。

== 决定如何代理您的Web服务

虽然很多时候您可以在不使用CXF的情况下代理Web服务（请参阅 link:/mule-user-guide/v/3.2/proxying-web-services[代理Web服务]），但有几种情况您可能需要使用CXF代理：

* 直接处理SOAP体，例如直接向其中添加XML
* 利用CXF Web服务标准支持来使用WS-Security或WS-Addressing
* 执行WS-Policy断言
* 轻松服务与您的服务相关联的WSDL
* 转换SOAP正文

当您想要调用服务时，您将使用wsdl-cxf而不是代理，并且以下一项或多项适用：

* 您不想从WSDL生成客户端
* 您没有原始XML
* 该服务接受简单的参数，如字符串，整型，长整型或日期

CXF代理支持使用SOAP正文或整个SOAP信封。默认情况下，只有SOAP主体作为有效负载发送，但可以通过"payload"属性设置有效负载模式以根据需要进行封装。

== 服务器端代理

要代理Web服务以便您可以使用原始XML，您可以创建一个CXF代理消息处理器：

[source, xml, linenums]
----
<cxf:proxy-service />
----

这将使得Mule消息有效载荷中的SOAP Body可用作XMLStreamReader。要使用CXF代理服务WSDL，必须将WSDL名称空间指定为属性：

[source, xml, linenums]
----
<cxf:proxy-service wsdlLocation="foo.wsdl"    serviceName="YOUR_WSDL_SERVICE"   namespace="YOUR_WSDL_NAMESPACE"/>
----

=== 客户端代理

同样，您可以创建出站端点以发送原始XML有效内容：

[source, xml, linenums]
----
<cxf:proxy-client/>
----
